--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-textarea-autosize": "^1.1.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
