--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.1.1",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
+    "vue-aplayer": "^1.6.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
